Flight Test input added standard deviation parameter. Removed abort logic Add multi accle/gyro/mag

--- a/src/lib/flight_test_input/flight_test_input_params.c.jinja
+++ b/src/lib/flight_test_input/flight_test_input_params.c.jinja
@@ -55,5 +55,10 @@ PARAM_DEFINE_FLOAT(FTI_{{ group }}_BIAS, 0.0f);
  */
 PARAM_DEFINE_FLOAT(FTI_{{ group }}_AMP, 1.0f);
 
-
+/**
+ * Test input {{ group }} standard deviation
+ *
+ * @group Flight Test Input {{ group }}
+ */
+PARAM_DEFINE_FLOAT(FTI_{{ group }}_SD, 1.0f);
 {% endfor %}
